--- a/components/wifi/CMakeLists.txt
+++ b/components/wifi/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "wifi.cpp"
-                    INCLUDE_DIRS "include")
+idf_component_register(SRCS "WiFiSta.cpp"
+                    INCLUDE_DIRS "include"
+                    REQUIRES esp_wifi esp_event)
