--- a/components/RobotController/CMakeLists.txt
+++ b/components/RobotController/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "RobotController.cpp"
                     INCLUDE_DIRS "include"
-                    REQUIRES WiFiStation HTTPServer nvs_flash)
+                    REQUIRES WiFiStation HTTPServer nvs_flash esp_driver_gpio)
