--- a/components/HTTPServer/test/CMakeLists.txt
+++ b/components/HTTPServer/test/CMakeLists.txt
@@ -5,7 +5,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 set(CMAKE_CXX_STANDARD 23)
-set(EXTRA_COMPONENT_DIRS ../..)
+set(EXTRA_COMPONENT_DIRS ../../HTTPServer ../../WiFiStation)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(HTTPServerTest)
