--- a/components/SteeringLibrary/CMakeLists.txt
+++ b/components/SteeringLibrary/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "SteeringLibrary.cpp"
-                    INCLUDE_DIRS "include")
+idf_component_register(SRCS "src/Vehicle4WD.cpp" "src/Vehicle4WDSteering.cpp"
+                    INCLUDE_DIRS "include"
+                    REQUIRES driver freertos esp_rom soc)
