--- a/components/CameraServer/CMakeLists.txt
+++ b/components/CameraServer/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "CameraServer.cpp"
                     INCLUDE_DIRS "include"
-                    REQUIRES HTTPServer)
+                    REQUIRES HTTPServer esp32-camera-master)
